# Foucloids

./: CMakeLists.txt  README.md  complex_wave.hpp  consts.hpp  debug_visu.hpp  dynamic_drawer.hpp  fourier_painter.hpp  integral.hpp  main.cpp  point.hpp  signal_wave.hpp  utils.hpp  wave_painter.hpp
include/: complex_coef.hpp  complex_wave.hpp  cycloid.hpp  event_manager.hpp  fourier_painter.hpp  integral.hpp  point.hpp  transition.hpp  utils.hpp  viewport_handler.hpp  window_context_handler.hpp
includes/: complex_wave.hpp  debug_visu.hpp  fourier_painter.hpp  harmony_utils.hpp  integral.hpp  main.cpp  point.hpp  signal2D.hpp  signal_wave.hpp  utils.hpp  wave_painter.hpp
src/: main.cpp
